# data-engineer-path

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  future_ideas.md  to-do.md
docs/: INDEX.md
projects/01-claims-warehouse/: README.md  pyproject.toml
projects/01-claims-warehouse/dashboard/: Dockerfile  app.py  requirements.txt
projects/01-claims-warehouse/dashboard/.streamlit/: config.toml
projects/01-claims-warehouse/dashboard/pages/: 1_loss_triangle.py  2_portfolio_health.py  3_pricing_adequacy.py  4_geographic_risk.py
projects/01-claims-warehouse/dashboard/utils/: bq_client.py
projects/01-claims-warehouse/data/sample_data/: claim_payments.csv  claims.csv  claims.parquet  coverages.csv  coverages.parquet  policies.csv  policyholders.csv  policyholders.parquet
projects/01-claims-warehouse/dataform/: dataform.json  package.json
projects/01-claims-warehouse/dataform/includes/: helpers.js
projects/01-claims-warehouse/scripts/: deploy_dataform.py  query_bigquery.py  setup_gcp.sh
projects/01-claims-warehouse/sql/marts/: dim_coverage.sql  dim_date.sql  dim_policy.sql  dim_policyholder.sql  fct_claim_payments.sql  fct_claims.sql
projects/01-claims-warehouse/sql/reports/: rpt_claim_frequency.sql  rpt_loss_triangle.sql
projects/01-claims-warehouse/sql/staging/: stg_claim_payments.sql  stg_claims.sql  stg_coverages.sql  stg_policies.sql  stg_policyholders.sql
projects/01-claims-warehouse/src/: data_generator.py  main.py
projects/01-claims-warehouse/tests/: conftest.py  test_data_generator.py  test_sql_transforms.py
projects/02-orchestrated-elt/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/02-orchestrated-elt/cloud_run/: deploy.sh  entrypoint.py
projects/02-orchestrated-elt/src/airflow_dags/: claims_etl_dag.py
projects/02-orchestrated-elt/src/dagster_pipeline/: assets.py  definitions.py  resources.py  sensors.py
projects/02-orchestrated-elt/src/pipeline/: config.py  runner.py
projects/02-orchestrated-elt/tests/: test_assets.py  test_pipeline.py
projects/03-streaming-claims-intake/: Dockerfile  README.md  pyproject.toml
projects/03-streaming-claims-intake/scripts/: run_local.sh
projects/03-streaming-claims-intake/src/: beam_pipeline.py  claims_simulator.py  pubsub_setup.py  subscriber.py
projects/03-streaming-claims-intake/tests/: test_beam_pipeline.py  test_simulator.py  test_subscriber.py
projects/05-streaming-claims-pipeline/: README.md  pyproject.toml
projects/05-streaming-claims-pipeline/flex_template/: Dockerfile  metadata.json
projects/05-streaming-claims-pipeline/scripts/: run_local.sh
projects/05-streaming-claims-pipeline/src/: deduplication.py  pipeline_options.py  schemas.py  streaming_pipeline.py  streaming_simulator.py  transforms.py
projects/05-streaming-claims-pipeline/tests/: test_pipeline.py  test_schemas.py  test_simulator.py  test_transforms.py  test_windowing.py
projects/06-pricing-ml-pipeline/: README.md  pyproject.toml
projects/06-pricing-ml-pipeline/scripts/: run_pipeline.sh
projects/06-pricing-ml-pipeline/sql/evaluation/: model_evaluation.sql
projects/06-pricing-ml-pipeline/sql/features/: feat_historical_benchmarks.sql  feat_policy_experience.sql  feat_risk_segments.sql
projects/06-pricing-ml-pipeline/sql/model/: model_scoring.sql  (+1 more)
projects/06-pricing-ml-pipeline/src/: feature_engineering.py  fremtpl_adapter.py  main.py  model_evaluation.py  model_scoring.py  model_training.py
projects/06-pricing-ml-pipeline/tests/: conftest.py  test_feature_engineering.py  test_model_evaluation.py  test_model_scoring.py  test_model_training.py
(+91 files in other folders)
