[project]
name = "claims-warehouse"
version = "0.1.0"
description = "Insurance claims data warehouse with star schema, DuckDB local dev, and BigQuery deployment"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "faker>=25.0.0",
    "numpy>=1.26.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
gcp = [
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-dataform>=0.5.0",
    "google-cloud-storage>=2.16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
