[project]
name = "pricing-ml-pipeline"
version = "0.1.0"
description = "Insurance pricing ML feature pipeline with Tweedie GLM, reading from P01 claims warehouse"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "statsmodels>=0.14.0",
    "numpy>=1.26.0",
    "polars>=1.0.0",
    "faker>=25.0.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
